waffle-timing-league/src/scss/components/profilepage.scss
@use '../util/mixins' as mixin;
@use '../util/color' as color;
@use "sass:map";

.profile {
	background-color: color.$b-dark3;
	width: 60%;
	margin: 0 auto;
	height: 100%;

	&-header {
		@include mixin.flex($dir: row, $gap: 100px);
		margin: 20px auto;
		width: 100%;
		padding: 10px 0px 30px 0px;
			
		&-column-left {
			@include mixin.flex($dir: column, $gap: 20px, $x-align: flex-end, $align: flex-start);
		}
		&-column-right {
			@include mixin.flex($dir: column, $gap: 25px, $x-align: flex-start, $align: flex-end);
		}
	}

	&-username {
		font-size: 3em;
		font-weight: 800;
	}
	&-title {
		font-size: 1em;
		font-weight: 400;
		font-style: italic;
	}

	&-userinfo {
		@include mixin.flex($dir: column, $gap: 10px, $x-align: center, $align: flex-start);
	}

	&-pfp {
		width: 200px;
		height: 200px;
		border-radius: 5px;
		object-fit: cover;
	}

	&-stats {
		@include mixin.flex($dir: column, $gap: 10px, $x-align: flex-start, $align: flex-start);

		&-title {
			font-size: 1.4em;
			font-weight: 800;
		}
	}

	&-scores {
		@include mixin.flex($dir: column, $gap: 20px, $x-align: center, $align: flex-start);

		&-header {	
			@include mixin.flex($dir: row, $gap: 30px, $x-align: center, $align: center);
			width: 100%;
			padding: 10px 0;
		}

		&-display {
			@include mixin.flex($dir: column, $gap: 10px, $x-align: center, $align: flex-start);

			margin-bottom: 20px;
			width: 100%;
		}

		&-title {
			font-size: 2.5em;
			font-weight: 800;
		}

		&-search {
			@include mixin.flex($dir: row, $gap: 10px, $x-align: center, $align: flex-start);
		}
	}
}

.search-input {
	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
	display: block;
	box-sizing: border-box;
	width: 100%;
	border-radius: 4px;
	border: 1px solid color.$neutral;
	background-color: color.$b-dark4;
	padding: 10px 25px;
	font-size: 14px;
}

.search-input:focus {
	outline: 1px solid color.$lite-dark;
}

.search-btn {
	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
	font-weight: 600;

	background-color: color.$accent-b-pastel;
	border-radius: 4px;
	border: none;
	color: color.$b-dark5;
	padding: 10px 24px;
	text-decoration: none;
	margin: 4px 2px;
	cursor: pointer;
}

.scorecard {
	width: 90%;
	background-color: color.$b-dark2;
	height: 45px;
	z-index: 2;
	//@include mixin.flex($dir: row, $gap: 20px, $x-align: center, $align: flex-start);
	
		
	display: grid;
	grid-template-columns: 70px 15px 40px 40% 12% auto auto;
	align-items: center;
	column-gap: 20px;
	
	transition: box-shadow 0.20s;

	&:hover {
		box-shadow: 0px 0px 10px color.$accent-b-pastel;
		cursor: pointer;
	}

	&-wrapper {
		@include mixin.flex($dir: column, $gap: 0px, $x-align: center, $align: flex-start);
		width: 100%;
	}

	&-inner {
		//width: 100%;
		@include mixin.flex($dir: row, $gap: 120px, $x-align: center, $align: flex-start);
	}

	&-rank {
		//width: 70px;
		height: 45px;
		background-color: color.$b-dark4;
		@include mixin.flex($dir: column, $x-align: center, $align: center);

		&-text {
			//width: 70px;
			font-size: 2em;
			font-weight: 800;
			font-style: italic;
			text-align: center;
		}
	}

	&-difficulty {
		//width: 40px;
		height: 40px;
		background-color: map.get(color.$diffs, "expert");
		@include mixin.flex($dir: column, $x-align: center, $align: center);

		&-text {
			text-align: center;
			width: 60px;
			color: color.$dark2;
			font-size: 1.5em;
			font-weight: 600;
		}
	}

	&-lamp {
		min-width: 15px;
		height: 45px;
	}

	&-titlegroup {
		@include mixin.flex($dir: column, $x-align: flex-start, $align: center);
	}
	&-group {
		@include mixin.flex($dir: column, $x-align: flex-start, $align: center);
		#points {
			font-weight: 600;
			font-size: 1.2em;
		}
		#dp {
			color: color.$accent-y-pastel;
			font-weight: 600;
			font-size: 1.2em;
		}
		#date {
			font-style: italic;
			font-weight: 400;
			font-size: 1.2em;
			@media (max-width: 1599.9px) {
				display: none;
			}
			@media (min-width: 1600px) {
				display: block;
			}
		}
	}

	&-title {
		font-size: 1.5em;
		font-weight: 600;
	}

	&-subtitle {
		font-size: 0.9em;
		font-style: italic;
		font-weight: 200;
	}

	&-stats {
		@include mixin.flex($dir: row, $gap: 70px, $x-align: center, $align: flex-start);
	}

	&-details {
		@include mixin.flex($dir: column, $gap: 5px, $x-align: center, $align: center);
		width: 90%;
		height: 75px;
		background-color: color.$b-dark5;

		&-judges {
			@include mixin.flex($dir: row, $gap: 40px, $x-align: center, $align: center);

			&-group {
				@include mixin.flex($dir: column, $gap: 5px, $x-align: center, $align: center);
			}
			

			&-title {
				font-weight: 800;
			}
		}
	}
}

